--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - buildx-experiment
     tags:
       - '*'
 
@@ -15,11 +16,21 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
 
-      - name: Build 🛠
-        uses: docker/build-push-action@v1
-        with:
-          username: rharter
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-          repository: rharter/goaccess-cloudfront
-          tag_with_ref: true
-          add_git_labels: true
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+
+      - name: Run Buildx
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm64,linux/arm/v7 \
+            -t rharter/goaccess-cloudfront .
+
+#      - name: Build 🛠
+#        uses: docker/build-push-action@v1
+#        with:
+#          username: rharter
+#          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+#          repository: rharter/goaccess-cloudfront
+#          tag_with_ref: true
+#          add_git_labels: true
